# canopen_manager

./: .gitignore  CMakeLists.txt  README.md  build_ros1.sh  build_ros2.sh  package.xml  simple_test.py  test_sdo.py
canopen_info_json/: __init__.py  canopen_info copy.json  canopen_info.json  canopen_info_zeroerr.json
canopen_motor/: __init__.py
canopen_motor/config/: elmo.dcf
canopen_motor/motor_manager/: abstract_motor.py  motor_controller.py  motor_factory.py
canopen_motor/motor_vendors/: motorVendorElmo.py  motorVendorZeroErr.py
common_canopen/: __init__.py
common_canopen/canopen_info_json/: canopen_info.json
common_canopen/canopen_motor/config/: ZeroErr Driver_V1.5.eds  __init__.py
common_canopen/canopen_motor/motor_manager/: __init__.py  motor_controller.py  motor_factory.py
common_canopen/canopen_motor/motor_vendors/: __init__.py  motorVendorZeroErr.py
common_canopen/src/: __init__.py
launch/: canopen_manager.launch
ros1_interface/: CMakeLists.txt  __init__.py  package.xml
ros1_interface/src/: __init__.py  canopen_node.py  motor_setting_node.py  send_command.py
ros2_interface/: CMakeLists.txt  package.xml  setup.py
ros2_interface/launch/: canopen_manager.launch.py
ros2_interface/ros2_interface/: __init__.py
ros2_interface/src/: __init__.py  canopen_node.py  canopen_node_new.py  send_command.py
scripts/: canopen_node.py  motor_setting_node.py  send_command.py
