<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_interface</name>
  <version>0.1.0</version>
  <description>CANopen ROS2 인터페이스 - ROS2에서 CANopen 라이브러리를 사용하는 인터페이스</description>

  <maintainer email="user@example.com">ROS User</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/your_username/ros2_interface</url>
  <author email="user@example.com">ROS User</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  
  <exec_depend>python3-canopen</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 